--- a/D42_Consolidation_info/public/index.html
+++ b/D42_Consolidation_info/public/index.html
@@ -1,8 +1,100 @@
-<html>
-    <header>
-        <title>Hello there</title>
-    </header>
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> élevage canin</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
     <body>
-        <h1>Hello there !</h1>
+        <header class="debug">
+            <nav>
+                <img id="logo-site" src="https://img.freepik.com/vecteurs-libre/silhouette-teckel-design-plat_23-2150283176.jpg?t=st=1744638712~exp=1744642312~hmac=96092f968b439ff0ee2055240a44990ffd7e97fd7b16da52a0ad38c3a90cf640&w=740" 
+                alt="logo-site">
+                <ul>
+                    <li>
+                        <a href="./index.html" class="link">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="./services.html" class="link">Services & chiens disponibles</a>
+                    </li>
+
+                </ul>
+            </nav>
+           
+        </header>
+        <main class="debug">
+            <h1>
+                ELEVAGE CANIN
+            </h1>
+            <div>
+                <section class="section section-informations">
+                    <h2>NOTRE ELEVAGE</h2>
+                    <article>
+                        <h3>LIEU</h3>
+                        <p>Au cœur de Vêtre-sur-Anzon, le Domaine Green Pearl se démarque en tant que référence incontournable 
+                            dans le monde de l'élevage de chiens. Nous sommes bien plus qu'un élevage ordinaire, nous sommes une 
+                            communauté dédiée à l'amour, au soin et à la préservation des races exceptionnelles telles que les Terre-Neuve, 
+                            les Malamutes d'Alaska et les Malinois</p>
+                    </article>
+                    <article>
+                        <h3>BIEN-ETRE</h3>
+                        <p>Chez Domaine Green Pearl, nous offrons plus qu'un lieu de reproduction. Nos chiens vivent dans des conditions optimales, 
+                            avec un environnement adapté à leurs besoins physiques et mentaux. Nous croyons fermement que des chiens bien équilibrés et heureux 
+                            sont essentiels pour produire des chiots en excellente santé.</p>
+                        
+                    </article>
+
+                </section>
+            <hr>
+                <section class="section" id="section-temoignages">
+                    <h2>TEMOIGNAGES</h2>
+                    <article class="temoignage">
+                        <h3>Bill G.</h3>
+                        <p>Je remercie cet éleveur ultra professionnel pour mon petit spitz c'est une 
+                            boule d'amour ! Éleveur pro chien au top dans ses baskets on voit que cet
+                             éleveur est passionné par ce qu'il fait ! Les chiens sont au top dans leur
+                            basket mon petit chiot est ultra ultra sociable avec les enfants c'est 
+                            une crème et les autres animaux également ! C'est un chiot d'amour je 
+                            remercie mille fois cet élevage grâce à lui et à mon petit caramel je suis
+                            la plus heureuse ! Je recommande SARL LA COLO les yeux fermés ! Conseils, 
+                            bienveillance, amour des chiens et respect de l'animal cet éleveur est top
+                            top top !
+                        </p>
+                    </article>
+                    <article class="temoignage">
+                        <h3>Steve J.</h3>
+                        <p>Je remercie cet éleveur ultra professionnel pour mon petit spitz c'est une 
+                            boule d'amour ! Éleveur pro chien au top dans ses baskets on voit que cet
+                            éleveur est passionné par ce qu'il fait ! Les chiens sont au top dans leur
+                            basket mon petit chiot est ultra ultra sociable avec les enfants c'est 
+                            une crème et les autres animaux également ! C'est un chiot d'amour je 
+                            remercie mille fois cet élevage grâce à lui et à mon petit caramel je suis
+                            la plus heureuse ! Je recommande les yeux fermés ! Conseils, 
+                            bienveillance, amour des chiens et respect de l'animal cet éleveur est top
+                            top top !
+                        </p>
+                    </article>
+                    <article class="temoignage">
+                        <h3>Bill G.</h3>
+                        <p>Élevage au grand professionnalisme, accueillant et avec bonne hygiène.
+                            De bons conseils et informations car nous ne connaissions pas bien la race du Bouvier australien.
+                            Toujours disponible en cas de questions!
+                        </p>
+                    </article>
+
+                </section>
+  
+            </div>
+
+        </main>
+        <footer class="debug">
+            <div>
+                <p> Copyright © 2025 -
+                    <a href="index.html" class="link">Mentions légales</a>
+                    <a href="index.html" class="link">Contact</a>
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
